--- a/plugin.xml
+++ b/plugin.xml
@@ -10,6 +10,7 @@
     <config-file parent="/*" target="res/xml/config.xml">
       <feature name="getuiwrapper">
         <param name="android-package" value="com.pluswave.getui.wrapper.getuiwrapper" />
+        <param name="onload" value="true" />
       </feature>
     </config-file>
     <config-file parent="/*" target="AndroidManifest.xml">
