--- a/plugin.xml
+++ b/plugin.xml
@@ -182,29 +182,25 @@
       <string>$APP_SECRET</string>
     </config-file>
 
-    <preference name="BLUETOOTH_USAGE_DESCRIPTION" default="通过使用蓝牙可以做到更及时的后台消息推送" />
-    <config-file target="*-Info.plist" parent="NSBluetoothPeripheralUsageDescription">
-             <string>$BLUETOOTH_USAGE_DESCRIPTION</string>
-    </config-file>
-
     <source-file src="src/ios/AppDelegate+notification.m" />
     <source-file src="src/ios/PushPlugin.m" />
 
     <header-file src="src/ios/AppDelegate+notification.h" />
     <header-file src="src/ios/PushPlugin.h" />
 
-    <source-file src="src/ios/GtSdkLib/libGeTuiSdk-1.3.0.a" framework="true"/>
+    <source-file src="src/ios/GtSdkLib/libGeTuiSdk-1.6.2.0-noidfa.a" framework="true"/>
     <header-file src="src/ios/GtSdkLib/GeTuiSdk.h" />
     <source-file src="src/ios/gtsdk.plist"  />
     
+    <framework src="libc++.dylib" />
     <framework src="libz.dylib" />
     <framework src="libsqlite3.0.dylib" />
     <framework src="CFNetwork.framework" />
+    <framework src="MobileCoreServices.framework" />
     <framework src="SystemConfiguration.framework" />
     <framework src="CoreTelephony.framework" />
     <framework src="AVFoundation.framework" />
     <framework src="CoreLocation.framework" />
-    <framework src="CoreBluetooth.framework" />
 
   </platform>
 
